Correct С library, serial port working now