@@ -40,11 +40,14 @@ public class SerialPort {
 	public SerialPort(File device, int baudrate, int flags) throws SecurityException, IOException {
 
 		/* Check access permission */
-		if (!device.canRead() || !device.canWrite()) {
+
+/*		if (!device.canRead() || !device.canWrite()) {
 			try {
-				/* Missing read/write permission, trying to chmod the file */
+
+*//* Missing read/write permission, trying to chmod the file *//*
+
 				Process su;
-				su = Runtime.getRuntime().exec("/system/bin/su");
+				su = Runtime.getRuntime().exec(new String[] {"su", "-c"});
 				String cmd = "chmod 666 " + device.getAbsolutePath() + "\n"
 						+ "exit\n";
 				su.getOutputStream().write(cmd.getBytes());
@@ -56,7 +59,8 @@ public class SerialPort {
 				e.printStackTrace();
 				throw new SecurityException();
 			}
-		}
+		}*/
+
 
 		mFd = open(device.getAbsolutePath(), baudrate, flags);
 		if (mFd == null) {
@@ -80,6 +84,6 @@ public class SerialPort {
 	private native static FileDescriptor open(String path, int baudrate, int flags);
 	public native void close();
 	static {
-		System.loadLibrary("serial_port");
+		System.loadLibrary("SerialPort");
 	}
 }
